# agora

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: agent.rs  auth.rs  chain.rs  mod.rs
desktop/src/components/: AgentPanel.css  AgentPanel.tsx  ChainStatusBar.css  ChainStatusBar.tsx  Sidebar.css  Sidebar.tsx
desktop/src/context/: AgentContext.tsx  AuthContext.tsx  ChainContext.tsx
desktop/src/pages/: AuthPage.css  AuthPage.tsx  CourtsPage.tsx  LawsPage.tsx  Page.css  ProposalsPage.tsx  TreasuryPage.tsx
desktop/src/styles/: app.css  global.css
docs/: code-review-2026-06-19.md
mobile/: package.json
mobile/src/: App.tsx
mobile/src/chain/: api.ts  constitution.ts  courts.ts  identity.ts  voting.ts
mobile/src/screens/: RegisterScreen.tsx  VoteScreen.tsx
node/: Cargo.toml
pallets/pallet-constitution/: Cargo.toml
pallets/pallet-constitution/src/: lib.rs
pallets/pallet-courts/: Cargo.toml
pallets/pallet-courts/src/: lib.rs
pallets/pallet-identity/: Cargo.toml
pallets/pallet-identity/src/: lib.rs
pallets/pallet-treasury-ledger/: Cargo.toml
pallets/pallet-treasury-ledger/src/: lib.rs
pallets/pallet-voting/: Cargo.toml
pallets/pallet-voting/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  verifier.rs
runtime/src/configs/: mod.rs
scripts/: convert_vk.py
